--- a/Cube 2/resource/lang/en_US.lang
+++ b/Cube 2/resource/lang/en_US.lang
@@ -10,3 +10,4 @@ button.quit.name=Exit
 button.controls.name=Controls
 button.language.name=Language
 button.back.name=Back
+button.finish.name=Finish
