--- a/Cube 2/resource/lang/fr_FR.lang
+++ b/Cube 2/resource/lang/fr_FR.lang
@@ -10,3 +10,4 @@ button.quit.name=Quitter
 button.controls.name=Contrôles
 button.language.name=Langage
 button.back.name=Retour
+button.finish.name=Terminé
