--- a/Cube 2/resource/lang/en_US.lang
+++ b/Cube 2/resource/lang/en_US.lang
@@ -11,3 +11,6 @@ button.controls.name=Controls
 button.language.name=Language
 button.back.name=Back
 button.finish.name=Finish
+#Entities
+entity.player.name=Player
+entity.venom.name=Venom
